--- a/layout.html
+++ b/layout.html
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div>
-        <img src="image/slider-1.jpg" alt="" />
+        <img src="image/slider-4.png" alt="" />
         <div class="container">
           <div class="slider-detail">
             <h3>Your Health Is Your Priority</h3>
